--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 # MINITAGE LIBRARY PROJECT BUILDOUT
 ################################################################################
 [buildout]
+extensions=buildout.minitagificator
 parts = part
 versions = versions
 hooks-directory = ${buildout:directory}/hooks
@@ -10,16 +11,23 @@ develop-eggs-directory=../../eggs/develop-eggs
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://${mirrors:gentoo}/gentoo/distfiles/tiff-4.0.1.tar.gz
+url =http://${mirrors:gentoo}/distfiles/otp_src_R15B03-1.tar.gz
+md5sum = eccd1e6dda6132993555e088005019f2
+#patches=${buildout:directory}/autotoolsgen.patch
+#patch-options=-Np1
+#pre-configure-hook=h.py:p
 
-md5sum = fae149cc9da35c598d8be897826dfc63
-
-
-
-    
+configure-options=
+    --enable-sctp
+    --with-ssl=${buildout:directory}/../openssl-1/parts/part
+    --enable-dynamic-ssl-lib
+    --enable-threads
+    --enable-smp-support
+    --enable-kernel-poll
+    --enable-shared-zlib
+    --enable-hipe
+#    --enable-halfword-emulator
 
 
 [mirrors]
-gentoo = mirror.mcs.anl.gov/pub
-
-
+gentoo = gentoo.tiscali.nl
