--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,10 @@ develop-eggs-directory=../../eggs/develop-eggs
 recipe = minitage.recipe.cmmi
 url =http://${mirrors:gentoo}/distfiles/otp_src_R15B03-1.tar.gz
 md5sum = eccd1e6dda6132993555e088005019f2
+#url =http://www.erlang.org/download/otp_src_R16B.tar.gz
+#md5sum = 7ee131515bc496e7522e0dec2a4c26e3
+
+
 #patches=${buildout:directory}/autotoolsgen.patch
 #patch-options=-Np1
 #pre-configure-hook=h.py:p
@@ -25,9 +29,14 @@ configure-options=
     --enable-smp-support
     --enable-kernel-poll
     --enable-shared-zlib
+    --disable-silent-rules
     --enable-hipe
 #    --enable-halfword-emulator
-
+    --without-dynamic-trace
+patches=
+    ${buildout:directory}/patch-erts-emulator-Makefile.in
+    ${buildout:directory}/patch-lib_erl__interface_src_connect_ei__resolve.c
+    ${buildout:directory}/patch-lib_odbc_c__src_odbcserver.c
 
 [mirrors]
 gentoo = gentoo.tiscali.nl
